# lobby202511

./: .dockerignore  .gitignore  README.md  add_tournaments_to_psql.py  agents_mixed (Copie).txt  agents_mixed.txt  analysis_results.md  big_change.txt  diagnose_games.py  display_board.py  example_MCTS_GAT.py  extract_from_firestore.py  extract_from_valkey.py  genetic_bob.py  genetic_diego.py  genetic_jack.py  genetic_swiss_bob.py  genetic_swiss_diego.py  genetic_swiss_jack.py  genetic_swiss_klaus.py  gpu_performance_test.py  greedy_bob_results.csv  greedy_jack_results_swiss.csv  imitate_diego.py  index2.html  jest.config.js  learning_mcts_swiss_tournament.py  letsTakeALook.py  letsTakeALook_2.py  letsTakeALook_3.py  make_user_admin.py  mcts_against_greedy_jack_train.py  my_greedy_bob_agents.txt  package-lock.json  package.json  reexport_onnx.py  replay_games.sh  requirements.txt  run_batch.sh  self_play_train.py  (+7 more)
games/: boardUtils.js  dragDrop.js  gameLogic.js  main.js  renderer.js  rules.js  socketHandler.js  state.js  store.js  ui.js  utils.js
javascript/: debug_replay.js  index.js  index2.html  letsTakeALook.py  package.json  serverD.js
new_main/backend/rust-napi/: Cargo.toml  index.d.ts  index.js  index.node  package-lock.json  package.json
new_main/backend/rust-napi/src/: lib.rs
new_main/bot-server/: Cargo.toml  Dockerfile  Dockerfile (Copie)
new_main/bot-server/models/greedy_jack/: rank_001_uROvaAwh08.json  rank_002_yYtlgZLn13.json  rank_032_LvUtjzmJ02.json
new_main/bot-server/src/: handlers.rs  main.rs
new_main/frontend/rust-wasm/: Cargo.toml
new_main/frontend/rust-wasm/src/: lib.rs
new_main/rust-core/: Cargo.toml
new_main/rust-core/src/: engine.rs  lib.rs  models.rs  parser.rs
rust/: Cargo.toml  check_serialization.rs  model.onnx  model.onnx.data  serverRust.js  serverRust_greedy_bob.js  tests_append.rs
rust/rust/mcts_temp/: game_16b501ac-5337-40fd-9c8f-23527f438a6f.json  game_1aefeaf3-dd6e-492c-b38f-ef4bb7d4202b.json  game_1b5c74cd-3582-430c-9fa7-201c8825e446.json  game_20c15fe7-9097-4bf8-937f-f32661701f83.json  game_27c98326-c0f1-479a-b941-74bdd19a61a8.json  game_302d874d-f292-4740-ae4d-f389dfaab6b7.json  game_3d4ba3c9-2dc4-4734-9602-0bcbb7755d61.json  game_459ce639-9a70-449e-8fc0-78400113b59b.json  game_4655b40c-16c9-4ad6-8461-55d43df2370f.json  game_4bc41d95-4322-45b8-bf60-83a60aa24c49.json  game_4e07c27b-cd36-4dcc-8a7d-b22ce4f46a1d.json  game_51722466-6319-4eb1-ab8d-e79134b90f4f.json  game_54938c64-9890-404b-a7c0-c0a9dde619b2.json  game_5bd26cc2-0f6c-42d6-8a5e-34d277ed3ef2.json  game_643a793f-f04f-49e5-8a29-fbc0c5719696.json  game_694304a6-2581-4932-a98c-1371c5cd8ba1.json  game_8292bcb4-f1eb-48b7-9a04-9a0f76097897.json  game_8ce23fab-e193-46c0-a949-11043c406083.json  game_944ee44c-f428-420f-bf55-68fb0b82abf4.json  game_98ec0a4e-c723-4ab6-a4fa-2599f5ec52fc.json  game_9d571e27-110d-4bf4-9d2e-80fb0f4c461e.json  game_a7a65a69-41ec-4436-9a21-5235a6957e30.json  game_abf4c835-f918-4fc1-9a21-0f757231eeed.json  game_b2a721de-62b4-48e8-aa7f-fb9dda7a8b95.json  game_b9b55d37-0f2a-4a35-b44a-c81ea8f802c9.json  game_c95acead-fcce-4e4d-9f57-64ba4cb42261.json  game_d12a32e4-7e5d-404e-a5c4-f51b7184aefb.json  game_d5f1af0c-fb39-4cea-941f-344deac17169.json  game_dc90171b-61db-4715-8482-2697f39979a4.json  game_ddac093f-7915-4d54-bd2b-5d897c4cb5b2.json  game_e061e19e-742f-40ea-a9c1-42386fb13b72.json  game_e0758024-edac-4cec-b2ff-522812a30eb8.json  game_e0c6629e-8abe-4bac-a19c-fb8e4da4a28b.json  game_e2ac8a8d-efd8-41e8-b40b-bd4ed05e9793.json  game_fbc7d971-644c-4e77-adcc-6afe90bbffc2.json
rust/src/: agent_tests.rs  engine.rs  helpers.rs  lib.rs  main.rs  mcts_tests.rs  napi_tutorial.rs  parser.rs  recorder.rs  rules_tests.rs  rules_tests_fixed.rs  server.rs
rust/src/agents/: graph.rs  greedy_bob.rs  greedy_jack.rs  imprudent_klaus.rs  mcts.rs  mod.rs  quick_diego.rs  random.rs
rust/static/: app.js  index.html  replay.html  replay.js
(+1792 files in other folders)
