[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2.16.14", features = ["serde-json"], optional = true }
napi-derive = { version = "2.16.13", optional = true }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = "0.12.5"
futures = "0.3.32"
polars = { version = "0.53.0", features = ["parquet"] }
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["formatting", "macros", "std"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
uuid = { version = "1.22.0", features = ["v4"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "download-binaries", "tls-rustls"], optional = true }
ndarray = { version = "0.17.2", features = ["std"] }
rust-core = { path = "../new_main/rust-core" }

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
onnx = ["dep:ort"]

