[package]
name = "backend-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.14", features = ["serde-json"] }
napi-derive = "2.16.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-core = { path = "../../rust-core" }

[build-dependencies]
napi-build = "2.1"
